// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ast > Compound list 1`] = `
{
  "commands": [
    {
      "commands": [
        {
          "name": {
            "text": "echo",
            "type": "Word",
          },
          "type": "Command",
        },
        {
          "name": {
            "text": "ls",
            "type": "Word",
          },
          "type": "Command",
        },
      ],
      "type": "CompoundList",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > Compound list with multiple redirections 1`] = `
{
  "commands": [
    {
      "commands": [
        {
          "name": {
            "text": "echo",
            "type": "Word",
          },
          "type": "Command",
        },
        {
          "name": {
            "text": "ls",
            "type": "Word",
          },
          "type": "Command",
        },
      ],
      "redirections": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
        {
          "file": {
            "text": "input.dat",
            "type": "Word",
          },
          "op": {
            "text": "<",
            "type": "Less",
          },
          "type": "Redirect",
        },
      ],
      "type": "CompoundList",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > Compound list with redirections 1`] = `
{
  "commands": [
    {
      "commands": [
        {
          "name": {
            "text": "echo",
            "type": "Word",
          },
          "type": "Command",
        },
        {
          "name": {
            "text": "ls",
            "type": "Word",
          },
          "type": "Command",
        },
      ],
      "redirections": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
      ],
      "type": "CompoundList",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > LogicalExpression separated by & 1`] = `
{
  "commands": [
    {
      "async": true,
      "left": {
        "name": {
          "text": "echo",
          "type": "Word",
        },
        "type": "Command",
      },
      "op": "and",
      "right": {
        "name": {
          "text": "ls",
          "type": "Word",
        },
        "type": "Command",
      },
      "type": "LogicalExpression",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > LogicalExpressions separated by & 1`] = `
{
  "commands": [
    {
      "async": true,
      "left": {
        "name": {
          "text": "echo",
          "type": "Word",
        },
        "type": "Command",
      },
      "op": "and",
      "right": {
        "name": {
          "text": "ls",
          "type": "Word",
        },
        "type": "Command",
      },
      "type": "LogicalExpression",
    },
    {
      "name": {
        "text": "ciao",
        "type": "Word",
      },
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > assignment alone 1`] = `
{
  "commands": [
    {
      "prefix": [
        {
          "text": "TEST=1",
          "type": "AssignmentWord",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > bang pipelines 1`] = `
{
  "commands": [
    {
      "bang": true,
      "commands": [
        {
          "name": {
            "text": "run",
            "type": "Word",
          },
          "type": "Command",
        },
        {
          "name": {
            "text": "cry",
            "type": "Word",
          },
          "type": "Command",
        },
      ],
      "type": "Pipeline",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with multiple lines continuation 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "suffix": [
        {
          "text": "there",
          "type": "Word",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with multiple new lines 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "suffix": [
        {
          "text": "world",
          "type": "Word",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with multiple prefixes 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "prefix": [
        {
          "text": "TEST1=1",
          "type": "AssignmentWord",
        },
        {
          "text": "TEST2=2",
          "type": "AssignmentWord",
        },
      ],
      "suffix": [
        {
          "text": "world",
          "type": "Word",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with multiple redirections 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "suffix": [
        {
          "text": "world",
          "type": "Word",
        },
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
        {
          "file": {
            "text": "input.dat",
            "type": "Word",
          },
          "op": {
            "text": "<",
            "type": "Less",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with one argument 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "suffix": [
        {
          "text": "world",
          "type": "Word",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with pre-assignment 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "run",
        "type": "Word",
      },
      "prefix": [
        {
          "text": "TEST=1",
          "type": "AssignmentWord",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stderr append redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "numberIo": {
            "text": "2",
            "type": "IoNumber",
          },
          "op": {
            "text": ">>",
            "type": "Dgreat",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stderr redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "numberIo": {
            "text": "2",
            "type": "IoNumber",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stderr redirection to file 2`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "numberIo": {
            "text": "2",
            "type": "IoNumber",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stdin redirection from file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": "<",
            "type": "Less",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stdout and stderr append redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">>",
            "type": "Dgreat",
          },
          "type": "Redirect",
        },
        {
          "file": {
            "text": "1",
            "type": "Word",
          },
          "numberIo": {
            "text": "2",
            "type": "IoNumber",
          },
          "op": {
            "text": ">&",
            "type": "Greatand",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stdout and stderr redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
        {
          "file": {
            "text": "1",
            "type": "Word",
          },
          "numberIo": {
            "text": "2",
            "type": "IoNumber",
          },
          "op": {
            "text": ">&",
            "type": "Greatand",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stdout append redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">>",
            "type": "Dgreat",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > command with stdout redirection to file 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "suffix": [
        {
          "file": {
            "text": "file.txt",
            "type": "Word",
          },
          "op": {
            "text": ">",
            "type": "Great",
          },
          "type": "Redirect",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > commands with AND \\n 1`] = `
{
  "commands": [
    {
      "left": {
        "name": {
          "text": "run",
          "type": "Word",
        },
        "type": "Command",
      },
      "op": "and",
      "right": {
        "name": {
          "text": "stop",
          "type": "Word",
        },
        "type": "Command",
      },
      "type": "LogicalExpression",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > commands with AND 1`] = `
{
  "commands": [
    {
      "left": {
        "name": {
          "text": "run",
          "type": "Word",
        },
        "type": "Command",
      },
      "op": "and",
      "right": {
        "name": {
          "text": "stop",
          "type": "Word",
        },
        "type": "Command",
      },
      "type": "LogicalExpression",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > commands with OR 1`] = `
{
  "commands": [
    {
      "left": {
        "name": {
          "text": "run",
          "type": "Word",
        },
        "type": "Command",
      },
      "op": "or",
      "right": {
        "name": {
          "text": "cry",
          "type": "Word",
        },
        "type": "Command",
      },
      "type": "LogicalExpression",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > multi line commands 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "type": "Command",
    },
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > no pre-assignment on suffix 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "suffix": [
        {
          "text": "TEST=1",
          "type": "Word",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > parse multiple suffix 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "command",
        "type": "Word",
      },
      "suffix": [
        {
          "text": "foo",
          "type": "Word",
        },
        {
          "text": "--lol",
          "type": "Word",
        },
      ],
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > parse subshell 1`] = `
{
  "commands": [
    {
      "list": {
        "commands": [
          {
            "name": {
              "text": "ls",
              "type": "Word",
            },
            "type": "Command",
          },
        ],
        "type": "CompoundList",
      },
      "type": "Subshell",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > pipelines 1`] = `
{
  "commands": [
    {
      "commands": [
        {
          "name": {
            "text": "run",
            "type": "Word",
          },
          "type": "Command",
        },
        {
          "name": {
            "text": "cry",
            "type": "Word",
          },
          "type": "Command",
        },
      ],
      "type": "Pipeline",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > single line commands 1`] = `
{
  "commands": [
    {
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "type": "Command",
    },
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > single line commands separated by & 1`] = `
{
  "commands": [
    {
      "async": true,
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "type": "Command",
    },
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;

exports[`ast > single line commands separated by &; 1`] = `
{
  "commands": [
    {
      "async": true,
      "name": {
        "text": "echo",
        "type": "Word",
      },
      "type": "Command",
    },
    {
      "name": {
        "text": "ls",
        "type": "Word",
      },
      "type": "Command",
    },
  ],
  "type": "Script",
}
`;
